syntax = "proto3";
option go_package="./go/chatapp_apiservice_v1";

package chatapp_apiservice_v1;

service Api {
  rpc Hello(HelloRequest) returns (HelloResponse) {};
  rpc GetNames(GetNamesRequest) returns (GetNamesResponse) {};
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}

message GetNamesRequest {
}

message GetNamesResponse {
  repeated string names = 1;
}
